--- a/package.json
+++ b/package.json
@@ -57,7 +57,11 @@
     "@storybook/manager-webpack5": "^6.4.9",
     "@storybook/node-logger": "^6.4.9",
     "@storybook/preset-create-react-app": "^4.0.0",
+    "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.4.9",
+    "css-loader": "^6.5.1",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.65.0"
   }
 }
